Adds breadcrumbs component to responsive layout and wires up newsletters data, also adds auth newsletters page markup

--- a/src/app.css
+++ b/src/app.css
@@ -38,3 +38,86 @@ figure[data-role='icon-container'] > svg {
   z-index: +1002;
 }
 
+.show-650 {
+  display: none !important;
+}
+
+.show-799 {
+  display: none !important;
+}
+
+.show-999 {
+  display: none !important;
+}
+
+@media (max-width: 650px) {
+  .show-650 {
+    display: var(--display, flex) !important;
+  }
+
+  .hide-650 {
+    display: none !important;
+  }
+}
+
+article-body ul {
+  list-style-type: disc;
+  margin: var(--spacing-16) 0;
+  padding: 0 0 0 var(--spacing-16);
+}
+
+article-body ol {
+  list-style-type: decimal;
+  padding: 0 0 0 var(--spacing-24);
+}
+
+article-body li {
+  display: list-item;
+  margin: 0 var(--spacing-8) var(--spacing-8) 0;
+  line-height: var(--height-large);
+}
+
+article-body h1,
+article-body h2,
+article-body h3,
+article-body h4,
+article-body h5,
+article-body h6 {
+  font-weight: bold;
+  margin: revert;
+  width: 100%;
+  word-break: break-word;
+}
+
+article-body p {
+  margin: var(--spacing-16) 0;
+}
+
+article-body blockquote {
+  margin: var(--spacing-16) var(--spacing-32);
+}
+
+article-body pre {
+  background-color: rgba(12, 12, 12, 1);
+  border-radius: var(--spacing-8);
+  border: 0.075rem inset rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0.25rem 0.25rem 0.5rem -0.125rem rgba(0, 0, 0, 0.75);
+  font-family: 'Liberation Mono', 'Courier New', Courier, monospace;
+  margin: var(--spacing-16) 0;
+  overflow-x: auto;
+  padding: var(--spacing-16);
+  white-space: pre;
+}
+
+article-body code {
+  background-color: rgba(12, 12, 12, 1);
+  font-family: 'Liberation Mono', 'Courier New', Courier, monospace;
+}
+
+article-body a {
+  color: var(--color-cyan);
+}
+
+article-body hr {
+  border-color: var(--color-gray);
+}
